update most constants & event listeners

--- a/HtmlTypeScriptPort/src/index.html
+++ b/HtmlTypeScriptPort/src/index.html
@@ -15,7 +15,7 @@
     <div id="wrapper">
         <header>
             <div id="topbuttonset">
-                <div class="buttonrow">
+                <!-- <div class="buttonrow">
                     <a>
                         <div class="button" id="buttonMain" onclick="mainMenu()">Main Menu</div>
                     </a>
@@ -34,6 +34,14 @@
                     <a>
                         <div class="button" id="buttonAppearance" onclick="appearanceScreen()">Appearance</div>
                     </a>
+                </div> -->
+                <div class="buttonrow">
+                    <div id="buttonMain" class="button">Main Menu</div>
+                    <div id="buttonData" class="button buttonbuffer">Data</div>
+                    <div id="buttonLevel" class="button">Level Up</div>
+                    <div id="buttonStats" class="button">Stats</div>
+                    <div id="buttonPerks" class="button">Perks</div>
+                    <div id="buttonAppearance" class="button">Appearance</div>
                 </div>
             </div>
         </header>
